5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1573_1334.log
== SUBMITION (2019-03-11 15:54:12) 
-- CODE:
print("Adicao: ", 8)

print("Subtracao: ", 8)

print("Multiplicacao: ", 8)

print("Divisao: ", 8)

print("Resto: ", 8)

print("Potenciacao: ", 8)
-- EXECUTION TIME:
0.138373
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:54:58) 
-- CODE:
print("Adicao:8 ", )

print("Subtracao:8 ", )

print("Multiplicacao: 8", )

print("Divisao:8 ", )

print("Resto: 8", )

print("Potenciacao:8 ", )
-- EXECUTION TIME:
0.136754
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:8 
Subtracao:8 
Multiplicacao: 8
Divisao:8 
Resto: 8
Potenciacao:8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:54:59) 
-- CODE:
print("Adicao:8 ", )

print("Subtracao:8 ", )

print("Multiplicacao: 8", )

print("Divisao:8 ", )

print("Resto: 8", )

print("Potenciacao:8 ", )
-- EXECUTION TIME:
0.138924
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:8 
Subtracao:8 
Multiplicacao: 8
Divisao:8 
Resto: 8
Potenciacao:8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:57:33) 
-- CODE:
print("Adicao:8 ",4+4 )

print("Subtracao:8 ", 8-4)

print("Multiplicacao: 8",2*4 )

print("Divisao:8 ",16/2 )

print("Resto: 8", )

print("Potenciacao:8 ", 2**3)
-- EXECUTION TIME:
0.204709
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:8  8
Subtracao:8  4
Multiplicacao: 8 8
Divisao:8  8.0
Resto: 8
Potenciacao:8  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:57:52) 
-- CODE:
print("Adicao:8 ",4+4 )

print("Subtracao:8 ", 8-4)

print("Multiplicacao: 8",2*4 )

print("Divisao:8 ",16/2 )

print("Resto: 8", )

print("Potenciacao:8 ", 2**3)
-- EXECUTION TIME:
0.198326
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:8  8
Subtracao:8  4
Multiplicacao: 8 8
Divisao:8  8.0
Resto: 8
Potenciacao:8  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:57:52) 
-- CODE:
print("Adicao:8 ",4+4 )

print("Subtracao:8 ", 8-4)

print("Multiplicacao: 8",2*4 )

print("Divisao:8 ",16/2 )

print("Resto: 8", )

print("Potenciacao:8 ", 2**3)
-- EXECUTION TIME:
0.219647
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:8  8
Subtracao:8  4
Multiplicacao: 8 8
Divisao:8  8.0
Resto: 8
Potenciacao:8  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:59:27) 
-- CODE:
print("Adicao:8 ",4+4 )

print("Subtracao:8 ", 8-4)

print("Multiplicacao: 8",2*4 )

print("Divisao:8 ",16/2 )

print("Resto: 8",8 )

print("Potenciacao:8 ", 2**3)
-- EXECUTION TIME:
0.207077
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:8  8
Subtracao:8  4
Multiplicacao: 8 8
Divisao:8  8.0
Resto: 8 8
Potenciacao:8  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:06:48) 
-- CODE:
print("Adicao: ",4+4 )

print("Subtracao: ", 8-4)

print("Multiplicacao: ",2*4 )

print("Divisao: ",16/2 )

print("Resto: ",8% )

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.122876
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 9
    print("Resto: ",8% )
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:06:58) 
-- CODE:
print("Adicao: ",4+4 )

print("Subtracao: ", 8-4)

print("Multiplicacao: ",2*4 )

print("Divisao: ",16/2 )

print("Resto: ",8% )

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.156555
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 9
    print("Resto: ",8% )
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:07:23) 
-- CODE:
print("Adicao: ",4+4 )

print("Subtracao: ", 8-4)

print("Multiplicacao: ",2*4 )

print("Divisao: ",16/2 )

print("Resto: ",17%2 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  4
Multiplicacao:  8
Divisao:  8.0
Resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:10:11) 
-- CODE:
print("Adicao: ",4+4 )

print("Subtracao: ", 8-4)

print("Multiplicacao: ",2*4 )

print("Divisao: ",16/2 )

print("Resto: ",2%2 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  4
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:11:36) 
-- CODE:
print("Adicao: ",4+4 )

print("Subtracao: ", 8-4)

print("Multiplicacao: ",2*4 )

print("Divisao: ",16/2 )

print("Resto: ",8)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.218843
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  4
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:11:44) 
-- CODE:
print("Adicao: ",4+4 )

print("Subtracao: ", 8-4)

print("Multiplicacao: ",2*4 )

print("Divisao: ",16/2 )

print("Resto: ",8 )

print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  4
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:11:47) 
-- CODE:
print("Adicao: ",4+4 )

print("Subtracao: ", 8-4)

print("Multiplicacao: ",2*4 )

print("Divisao: ",16/2 )

print("Resto: ",8 )

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.175748
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  4
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:19:30) 
-- CODE:
print("Adicao: ",5 + 3)

print("Subtracao: ",18-10)

print("Multiplicacao: ",2*4)

print("Divisao: ",16/2)

print("Resto: ",8)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.139243
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
